# i18ntools

./: .bandit.yml  .editorconfig  .gitignore  .mega-linter.yml  .pylintrc  CONTRIBUTING.md  DEPLOYING.md  DEVELOPMENT.md  LICENSE  README.md  kics.config  pyproject.toml  pyrightconfig.json  requirements.txt  sort_i18n_file.py  tox.ini  translate.py  translate_missing.py
.github/workflows/: mega-linter.yml  publish.yaml  python.yml
src/i18ntools/: parse_i18n_file.py  sort_i18n_file.py  translate.py  translate_missing.py
tests/: conftest.py  duplicate.properties  test_parse_i18n_file.py  test_sort_i18n_file.py  test_translate.py  test_translate_missing.py
tests/cassettes/: test_make_api_call.yml  test_translate_file.yml  test_translate_file_without_backslashes.yml  test_translate_missing_messages.yml  test_translate_missing_messages_remove_backslashes.yml  test_translate_missing_messages_with_invalid_api_key.yml  test_translate_missing_messages_without_sorting.yml  test_translate_with_invalid_api_key.yml
tests/resources/: example.properties  example2.properties  example_de.json  translations2_pt.properties  translations_de.properties  translations_de2.properties  translations_de_no_backslashes.properties
