[project]
name = "i18ntools"
version = "0.2.2"
description = "i18ntools helps translate Java properties i18n files using Azure Cognitive Services Translator"
readme = "README.md"
authors = [
    { name = "Tyler VanZanten", email = "tvanzanten@hypercision.com" }
]
dependencies = [
    "requests",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

[project.optional-dependencies]
dev = [
    "black",
]
test = [
    "pytest",
    "vcrpy",
    "tox",
]

[build-system]
requires = ["setuptools>=73.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/hypercision/i18ntools"
"Bug Reports" = "https://github.com/hypercision/i18ntools/issues"
"Source" = "https://github.com/hypercision/i18ntools"

[project.scripts]
translate = "i18ntools.translate:main"
translate-missing = "i18ntools.translate_missing:main"
parse-i18n-file = "i18ntools.parse_i18n_file:main"
sort-i18n-file = "i18ntools.sort_i18n_file:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-p no:legacypath",
]
